--- a/Calculadora01/Calculadora01.csproj
+++ b/Calculadora01/Calculadora01.csproj
@@ -60,6 +60,10 @@
     <Compile Include="CalculatorProgram.cs" />
     <Compile Include="Divide.cs" />
     <Compile Include="Multiply.cs" />
+    <Compile Include="OperationDataDrive\TestDivideDataDriver.cs" />
+    <Compile Include="OperationDataDrive\TestMultiplyDataDrive.cs" />
+    <Compile Include="OperationDataDrive\TestSubDataDrive.cs" />
+    <Compile Include="OperationDataDrive\TestSumDataDrive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Substract.cs" />
     <Compile Include="Sum.cs" />
